# DHLLDV-hpc

./: CMakeLists.txt  DHLLDV.cpp  DHLLDV.h  README.md  fluidutils.cpp  fluidutils.h  homogeneous.cpp  homogeneous.h  imitateXlsx.cpp  limitDepositVelocity.cpp  limitDepositVelocity.h  mixtureLossModel.cpp  mixtureLossModel.h  particleUtils.cpp  particleUtils.h  particleutils.cpp  particleutils.h  regime.cpp  regime.h  slipRatio.cpp  slipRatio.h  test.cpp  test_DHLLDV_class.cpp  test_LDV.cpp  test_slipRatio.cpp  test_vt.cpp  test_xlsx.cpp  viewer.cpp  waterData.cpp  waterData.h
core/: pipe.h  utils.cpp  utils.h
core/units/physical_dimensions/: pressure_gradient.hpp  volume_flow.hpp
core/units/systems/si/: pressure_gradient.hpp  volume_flow.hpp
